trying main page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
 <!DOCTYPE html>
+<html>
+<head>
+    <link href="/normalize.css" rel="stylesheet">
+    <link href="css/main.cc" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon/fav.ico">
+    
+    <title>BucketList</title>
+    <style>
+        header{
+            background: url("img/pink_flowers.jpg");
+            background-size: 740px 192px;
+            min-height: 192px;
+            background-repeat: no-repeat;
+            margin: 0px auto;
+            background-position: center;
+        }
+        header a{
+            text-decoration: none;
+            color: #fff;
+        }
+    </style>
+
+</head>
+<body>
+    <header>
+        <h1>from fantasy to fact</h1>
+    </header>
+</body>
+    
+</html>
