rough template for ppl done

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <body>
         <header>
             <div class="container">
+                <h1>BucketList</h1>
+                <h3>from fantasy to fact</h3>
                 <h2><a href="index-1.html">Log in</a></h2>
             </div>
         </header>
