front page changed to santa

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>BucketList</title>
         <style>
             header{
-                background: url("img/bokheh.jpg");
+                background: url("img/santa.jpg");
                 background-size: 1500px 850px;
                 background-repeat: no-repeat;
                 background-position: center;
